syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

package abac;
option go_package = ".;abac";

service Health {
    rpc Health(Void) returns (HealthResponse) {};
}

service Resource {
    rpc CreateResource(CreateResourceRequest) returns (CreateResourceResponse) {};
    rpc GetResource(GetResourceRequest) returns (GetResourceResponse) {};
    rpc UpdateResource(UpdateResourceRequest) returns (UpdateResourceResponse) {};
    rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse) {};
    rpc ListResource(ListResourceRequest) returns (ListResourceResponse) {};
}

service Attribute {
    rpc CreateAttribute(CreateAttributeRequest) returns (CreateAttributeResponse){};
    rpc BatchCreateAttribute(BatchCreateAttributeRequest) returns (BatchCreateAttributeResponse) {};
    rpc UpdateAttribute(UpdateAttributeRequest) returns (UpdateAttributeResponse){};
    rpc ListAttribute(ListAttributeRequest) returns (ListAttributeResponse){};
    rpc GetAttribute(GetAttributeRequest) returns (GetAttributeResponse){};
    rpc DeleteAttribute(DeleteAttributeRequest) returns (Void){};
}

message DeleteAttributeRequest {
    string id = 1;
}

message GetAttributeRequest {
    string id = 1;
}

message GetAttributeResponse {
    string id = 1;
    string name = 2;
    string string_value = 3;
    int64 integer_value = 4;
    float float_value = 5;
    bool bool_value = 6;
    google.protobuf.Timestamp date_value = 7;
    string type = 8;
    google.protobuf.Timestamp updated = 9;
    google.protobuf.Timestamp deleted = 10;
    google.protobuf.Timestamp created = 11;
}

message ListAttributeRequest {
    PagingMetadata pagingMetadata = 1;
}

message ListAttributeResponse {
    repeated GetAttributeResponse attributes = 1;
}

message UpdateAttributeRequest {
    message Data {
        string id = 1;
        string string_value = 2;
        int64 integer_value = 3;
        float float_value = 4;
        bool bool_value = 5;
        google.protobuf.Timestamp date_value = 6;
        string type = 7;
    }
    Data data = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message UpdateAttributeResponse {
    string id = 1;
}

message CreateAttributeRequest {
    string name = 1;
    string string_value = 2;
    int64 integer_value = 3;
    float float_value = 4;
    bool bool_value = 5;
    google.protobuf.Timestamp date_value = 6;
    string type = 7;
}

message CreateAttributeResponse {
    string id = 1;
}

message BatchCreateAttributeRequest {
    repeated CreateAttributeRequest attributes = 1;
}

message BatchCreateAttributeResponse {
    repeated string attribute_ids = 1;
}

message GetResourceRequest {
    string id = 1;
}

message GetResourceDataResponse {
    string id = 1;
    string name = 2;
    string ownerId = 3;
    string policyId = 4;
    string description = 5;
    google.protobuf.Timestamp updated = 6;
    google.protobuf.Timestamp deleted = 7;
    google.protobuf.Timestamp created = 8;
}

message GetResourceResponse {
    GetResourceDataResponse data = 1;
}

message CreateResourceRequest {
    string name = 1;
    string ownerId = 2;
    string policyId = 3;
    string description = 4;
}

message CreateResourceResponse {
    string id = 1;
}

message UpdateResourceRequest {
    message Data {
        string id = 1;
        string name = 2;
        string ownerId = 3;
        string policyId = 4;
        string description = 5;
    }

    Data data = 1;
    google.protobuf.FieldMask fieldMask = 2;


}

message UpdateResourceResponse {
    string id = 1;
}

message DeleteResourceRequest {
    string id = 1;
}

message DeleteResourceResponse {
    string id = 1;
}

message ListResourceRequest {
    PagingMetadata pagingMetadata = 1;
}

message ListResourceResponse {
    repeated GetResourceResponse data = 1;
    PagingMetadata pagingMetadata = 2;
}

message PagingMetadata {
    int64 pageNumber = 1;
    int64 pageSize = 2; 
    int64 total = 3;
}



message HealthResponse {
    string message = 1;
}

message Void {}
